force-app/main/default/objects/MFConductors__mdt/MFConductors__mdt.object-meta.xml
<CustomObject>
    <label>Mr Flow Conductor</label>
    <pluralLabel>Mr Flow Conductors</pluralLabel>
</CustomObject>