force-app/main/default/objects/MFConductors__mdt/fields/AIModel__c.field-meta.xml
<CustomField>
    <fullName>AIModel__c</fullName>
    <label>AI Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gpt-5</fullName>
                <default>true</default>
                <label>gpt-5</label>
            </value>
            <value>
                <fullName>gpt-5-minI</fullName>
            </value>
            <value>
                <fullName>gpt-5-nano</fullName>
            </value>
            <value>
                <fullName>gpt-4.1</fullName>
            </value>
            <value>
                <fullName>gpt-4.1-mini</fullName>
            </value>
            <value>
                <fullName>gpt-4.1-nano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>