force-app/main/default/objects/MFConductors__mdt/fields/AIProvider__c.field-meta.xml
<CustomField>
    <fullName>AIProvider__c</fullName>
    <label>AI Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpenAI</fullName>
                <default>true</default>
                <label>OpenAI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>