force-app/main/default/objects/MFConductors__mdt/fields/hasTools__c.field-meta.xml
<CustomField>
    <fullName>hasTools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tools</label>
    <type>Checkbox</type>
</CustomField>