force-app/main/default/objects/MFConductors__mdt/fields/MaxToolsCalls__c.field-meta.xml
<CustomField>
    <fullName>MaxToolsCalls__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Max Tools Calls</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>