force-app/main/default/objects/MFConductors__mdt/fields/ParallelToolCalls__c.field-meta.xml
<CustomField>
    <fullName>ParallelToolCalls__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Parallel Tool Calls</label>
    <type>Checkbox</type>
</CustomField>